@@ -1,3 +1,8 @@
+bloonix-plugins-wtrm (0.10) released at 2015-06-22
+
+    * Added new features: doTriggerEvent, doSwitchToFrame,doSwitchToParentFrame,
+      doDumpContent and doDumpFrameContent.
+
 bloonix-plugins-wtrm (0.10) released at 2015-06-16
 
     * The host id and service id is available as options since
